tests/baselines/reference/tsxPreserveEmit1.errors.txt
react.d.ts(6,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
test.tsx(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
test.tsx(12,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== test.tsx (2 errors) ====
    // Should emit 'react-router' in the AMD dependency list
    import React = require('react');
    import ReactRouter = require('react-router');
    
    import Route = ReactRouter.Route;
    
    var routes1 = <Route />;
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	export var X: any;
    }
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	// Should emit 'M.X' in both opening and closing tags
    	var y = <X></X>;
    }
    
==== react.d.ts (1 errors) ====
    declare module 'react' {
    	var x: any;
    	export = x;
    }
    
    declare module ReactRouter {
                   ~~~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	var Route: any;
    	interface Thing { }
    }
    declare module 'react-router' {
    	export = ReactRouter;
    }
    